# bit-perfect-player

./: .taurignore  Commands used to setup build env.txt  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  App.tsx.working  index.css
src-tauri/: Cargo.toml  library.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  main.rs.first  main.rs.working
src-tauri/src/modules/: audio_output.rs  database.rs  decoder.rs  mod.rs  player.rs  scanner.rs
src/components/: PlayerBar.tsx  Sidebar.tsx
src/hooks/: useAudioPlayer.ts
src/pages/: AlbumDetail.tsx  Albums.tsx  ArtistDetail.tsx  Artists.tsx  Library.tsx  NowPlaying.tsx  YouTube.tsx
