[package]
name = "bit-perfect-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bit_perfect_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17.3"
symphonia = { version = "0.5.5", features = ["all"] }
tauri-plugin-dialog = "2.7.0"
rb = "0.4.1"
thread-priority = "3.0.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
walkdir = "2.5.0"
tauri-plugin-fs = "2.0.0"
