[package]
name = "bit-perfect-player"
version = "0.1.0"
description = "An Audiophile Music Player"
authors = ["Jubin George"]
edition = "2021"

[lib]
name = "bit_perfect_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Audio Engine
cpal = "0.17.3"
symphonia = { version = "0.5.5", features = ["all"] }
rb = "0.4.1"
thread-priority = "3.0.0"
# Metadata & ReplayGain
lofty = "0.21" 
# Database & Filesystem
rusqlite = { version = "0.39.0", features = ["bundled"] }
walkdir = "2.5.0"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.0.0"
